# scholar-spider

./: .gitignore  README.md  browse.py  main.py  pyproject.toml  requirements.sh  storage.py
scholar-spider.git/: config  packed-refs
scholar-spider.git/objects/pack/: pack-0b1c6758ebfa969e5ca62b366a615d51d40066d6.idx  pack-0b1c6758ebfa969e5ca62b366a615d51d40066d6.pack  pack-0b1c6758ebfa969e5ca62b366a615d51d40066d6.rev
spider/: README.md  __init__.py  __main__.py  base.py  browse.py  engine.py  main.py  pythontest.py  schema.sql  storage.py  test.py  util.py  view.py
sql/: acl.sql  schema.sql
